# Home_work_18

./: pyproject.toml  requirements.txt  utils.py
schemas/: schema_adding_item_into_basket.json
tests/: conftest.py  test_adding_items_into_basket.py
