[tool.poetry]
name = "test-adding-items-into-basket"
version = "0.1.0"
description = ""
authors = ["Oksana Bondareva <xanka359@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selene = "2.0.0rc9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
